updating it into norway and updating html and styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <input type="text" id="user-input" placeholder="Enter phone number" />
+    <div id="user-input-container">
+      <h2>If you want to check if the number is valid in Norway, type here:</h2>
+      <input type="text" id="user-input" placeholder="Enter phone number" />
+    </div>
     <button id="check-btn">Check</button>
     <button id="clear-btn">Clear</button>
     <div id="results-div"></div>
